<resources>
    <string name="app_name">StudyAid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="scanner">SCANNER</string>
    <string name="notes">NOTES</string>
    <string name="todo_list">ToDo LIST</string>
    <string name="planner">PLANNER</string>
    <string name="flashcards">FLASHCARDS</string>
    <string name="focus">FOCUS</string>
    <string name="todo">TODO</string>
    <string name="StudyAid">StudyAid</string>
    <string name="title_activity_to_do_list_">To_do_list_Activity</string>
    <string name="time_is">Time Is ::</string>
    <string name="title_activity_new_notes_">NewNotes_Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="front">FRONT</string>
    <string name="back">BACK</string>
    <string name="my_decks">My Decks</string>
    <string name="shared_decks">Shared Decks</string>
    <string name="search_decks">Search Database</string>
    <string name="deck_edited">deck edited</string>
    <string name="deck_created">dech created</string>
    <string name="empty_card_error">empty card error</string>
    <string name="score_completion">Score</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>


</resources>
