<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Dashboard"
    tools:showIn="@layout/app_bar_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".8"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".90"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/focus_on"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="0.55"
                        android:background="@color/RED"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true">

                            <ImageView
                                android:id="@+id/imgViewf"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_centerHorizontal="true"
                                android:adjustViewBounds="true"
                                android:contentDescription="@string/todo"
                                android:padding="8dp"
                                android:scaleType="centerInside"
                                android:src="@drawable/focus"
                                android:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/imgViewf"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="5dp"
                                android:text="@string/focus"
                                android:textColor="@color/white"
                                android:textSize="16sp" />

                        </RelativeLayout>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/flashcard"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="0.65"
                        android:background="@color/blue"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true">

                            <ImageView
                                android:id="@+id/imgViewflashcard"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_centerHorizontal="true"
                                android:adjustViewBounds="true"
                                android:contentDescription="@string/todo"
                                android:padding="8dp"
                                android:scaleType="centerInside"
                                android:src="@drawable/flashcards"
                                android:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/imgViewflashcard"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="5dp"
                                android:text="@string/flashcards"
                                android:textColor="@color/white"
                                android:textSize="16sp" />

                        </RelativeLayout>

                    </RelativeLayout>
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/planner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.55"
                    android:background="@color/orange"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/imgView7"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/todo"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/planner"
                            android:tint="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/imgView7"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="5dp"
                            android:text="@string/planner"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                    </RelativeLayout>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_weight="1.5"
                android:baselineAligned="false">

                <RelativeLayout
                    android:id="@+id/scanner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.70"
                    android:background="@color/pink"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:paddingEnd="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="5dp"
                            android:text="@string/scanner"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:baselineAligned="false">

                <RelativeLayout
                    android:id="@+id/note"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.70"
                    android:background="@color/lime"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:paddingRight="10dp">

                    <RelativeLayout
                        android:id="@+id/pa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/imgViewNote"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/todo"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/note_i"
                            android:tint="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/imgViewNote"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="5dp"
                            android:text="@string/notes"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                    </RelativeLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/todo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.55"
                    android:background="@color/darkblue_dark"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/imgViewtodo"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:backgroundTint="@color/white"
                            android:contentDescription="@string/todo"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/baseline_list_black_18dp"
                            android:tint="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/imgViewtodo"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="5dp"
                            android:text="@string/todo_list"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                    </RelativeLayout>
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>